Added 3 new Exercises
This commit consists of 3 new demo exercises from the NIO and IO classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /DemoNIO/DemoNIO/nbproject/private/
+/DemoNIO/DemoNIO/build/
+/CRUDArbolBinario/nbproject/private/
+/CRUDArbolBinario/build/
+/DemoIO/nbproject/private/
+/DemoIO/build/
+/DemoOutputStream/nbproject/private/
+/DemoOutputStream/build/
