Added Write and Read IO projects
Added more NIO and IO projects, this time basic write and read.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 /DemoIO/build/
 /DemoOutputStream/nbproject/private/
 /DemoOutputStream/build/
+/DemoInputStream/nbproject/private/
+/DemoInputStream/build/
+/DemoSequentialDataFiles/nbproject/private/
+/DemoSequentialDataFiles/build/
+/DemoReadSequentialDataFiles/nbproject/private/
+/DemoReadSequentialDataFiles/build/
+/ReadEmployeeFileTwo/nbproject/private/
