Added more Access exercises
Added more exercises concerning Access, FileChannel and more.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 /DemoReadSequentialDataFiles/nbproject/private/
 /DemoReadSequentialDataFiles/build/
 /ReadEmployeeFileTwo/nbproject/private/
+/ReadEmployeeFileTwo/build/
+/DemoRandomAccessFile/nbproject/private/
+/DemoRandomAccessFile/build/
+/DemoRandomAccess2/nbproject/private/
+/DemoRandomAccess2/build/
+/DemoRandomAccess3/nbproject/private/
+/DemoRandomAccess3/build/
