Added new Random Access Exercise
This commit contains a new random access exercise, this time allows you to access records based on the ID without having to look at them sequentially, a lot of stuff has been obviated (error checking)

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@
 /DemoRandomAccess2/build/
 /DemoRandomAccess3/nbproject/private/
 /DemoRandomAccess3/build/
+/DemoLoopAccess/nbproject/private/
+/DemoLoopAccess/build/
