--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /DemoRandomAccess3/build/
 /DemoLoopAccess/nbproject/private/
 /DemoLoopAccess/build/
+/ReadEmployeesRandomly/nbproject/private/
+/ReadEmployeesRandomly/build/
