Added two new exercises
This commit contains two new exercises based on nio and io

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@
 /DemoLoopAccess/build/
 /ReadEmployeesRandomly/nbproject/private/
 /ReadEmployeesRandomly/build/
+/CreateFilesBasedOnState/nbproject/private/
+/CreateFilesBasedOnState/build/
+/ReadStateFile/nbproject/private/
