--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /CreateFilesBasedOnState/nbproject/private/
 /CreateFilesBasedOnState/build/
 /ReadStateFile/nbproject/private/
+/ReadStateFile/build/
